tests/typec-test/test_out/cross-module-item-access-parse-out.txt
error: expected '\n' | ';' but got String
 --> cross-module-item-access\root.ctl:1:11
  |
1 | use { "a" "b" } fn main() -> uint => pass(0.pass()) ;
  |           ^^^ token located here
  |
  = info: use -> list

